<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textMensaje"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mensaje"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">


            <RadioGroup
                android:id="@+id/rbtGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="52dp">

                <RadioButton
                    android:id="@+id/rbtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colorFondo"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="40dp" />

                <RadioButton
                    android:id="@+id/rbtn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/colorMensaje" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/rbtGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/colorRojo"
                    android:textColor="@android:color/holo_red_dark" />

                <RadioButton
                    android:id="@+id/rbtn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/colorVerde"
                    android:textColor="@android:color/holo_green_dark" />

                <RadioButton
                    android:id="@+id/rbtn5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/colorAzul"
                    android:textColor="@android:color/holo_blue_dark" />

            </RadioGroup>

        </LinearLayout>

        <CheckBox
            android:id="@+id/ckb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/visible" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejecutar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>